----------------------------------------------------------------------------

SimGrid (3.24.1) NOT RELEASED YET (v3.25 expected December 22. 2029, 04:19 UTC)

S4U:
- Actor: Merge signals on_migration_start/end into on_host_change
- Actor: Rename migrate() into set_host()
- Disk: Allow users to get the read and write nominal bandwidth values
- Exec: Implement wait_for(timeout)

XML:
- Parse errors now raise a simgrid::ParseError that you may want to catch.

Kernel:
- In simgrid::kernel::resource::Model, the methods next_occuring_event*() have
  been renamed to fix a spelling error. As usual, the previous definitions are
  kept with a deprecation warning. However, to avoid runtime errors, it is now
  forbidden to override these deprecated methods in a derived class. Please use
  the new names immediately if you need to override them.

XBT:
- Remove unused parameter 'free_ctn' for xbt_dict_set() and xbt_dict_set_ext().
- New module: random, providing classical random numbers generators.

Fixed bugs (FG#.. -> framagit bugs; FG!.. -> framagit merge requests):
 - GH#31: [MC] please provide an option to make MPI_Send asynchronous
 - GH#305: Unscheduled tasks are still excuted
 - GH#323: Crash when an actor turn off his physical host
 - FG!19: Removing RngStream

----------------------------------------------------------------------------

SimGrid (3.24) October 9. 2019

The Clean Disk Release.

S4U:
 - Introduce a s4u::Disk interface to manage the newly introduced <disk>
   tag. s4u::Disk is called to supplant s4u::Storage in a near future. It
   thus becomes the default resource to execute I/O operations. Examples
   and the file system plugin have been modified to use disks instead of
   storage elements. Storage can still be used but is doomed to disappear.
   Users are thus adviced to update their simulators accordingly.
 - Barrier::wait returns SG_BARRIER_SERIAL_THREAD for (only) one actor
   for consistency with pthread_barrier_wait()