@@ -19,9 +19,25 @@ static void test(sg_size_t size)
   XBT_INFO("Goodbye now!");
 }
 
+static void test_waitfor(sg_size_t size)
+{
+  simgrid::s4u::Disk* disk = simgrid::s4u::Host::current()->get_disks().front();
+  XBT_INFO("Hello! write %llu bytes from %s", size, disk->get_cname());
+
+  simgrid::s4u::IoPtr activity = disk->write_async(size);
+  try {
+    activity->wait_for(0.5);
+  } catch (simgrid::TimeoutException&) {
+    XBT_INFO("Asynchronous write: Timeout!");
+  }
+
+  XBT_INFO("Goodbye now!");
+}
+
 static void test_cancel(sg_size_t size)
 {
   simgrid::s4u::Disk* disk = simgrid::s4u::Host::current()->get_disks().front();
+  simgrid::s4u::this_actor::sleep_for(0.5);
   XBT_INFO("Hello! write %llu bytes from %s", size, disk->get_cname());
 
   simgrid::s4u::IoPtr activity = disk->write_async(size);
@@ -37,6 +53,7 @@ int main(int argc, char* argv[])
   simgrid::s4u::Engine e(&argc, argv);
   e.load_platform(argv[1]);
   simgrid::s4u::Actor::create("test", simgrid::s4u::Host::by_name("bob"), test, 2e7);
+  simgrid::s4u::Actor::create("test_waitfor", simgrid::s4u::Host::by_name("alice"), test_waitfor, 5e7);
   simgrid::s4u::Actor::create("test_cancel", simgrid::s4u::Host::by_name("alice"), test_cancel, 5e7);
 
   e.run();
