@@ -28,11 +28,14 @@ public:
   IoImpl& set_disk(resource::DiskImpl* disk);
 
   sg_size_t get_performed_ioops() { return performed_ioops_; }
+  resource::DiskImpl* get_disk() { return disk_; }
+  resource::StorageImpl* get_storage() { return storage_; }
 
   IoImpl* start();
   void post() override;
   void finish() override;
 
+  resource::Action* timeout_detector_ = nullptr;
   static xbt::signal<void(IoImpl const&)> on_start;
   static xbt::signal<void(IoImpl const&)> on_completion;
 };
